
=== Bugfixes
* RSpec's be_* matchers did not work in 0.3.9 and probably earlier versions. Now they do. (Aslak Hellesøy)
* The Rails cucumber environment won't declare gem dependencies if the plugin exists. (Aslak Hellesøy)
* The Rails cucumber generator will no longer declare gem dependencies on rspec if you use --testunit. (Aslak Hellesøy)

== 0.3.9 2009-05-27

Bugfix release for 0.3.8 released earlier today. 0.3.8 had a bug in the Rails cucumber
generator which is fixed in 0.3.9.

=== Bugfixes
* Fix broken Rails cucumber generator (Tim Glen)
* The Cucumber Rake task in non-fork mode will properly cause Rake to exit with 1 when Cucumber fails. (Aslak Hellesøy)

== 0.3.8 2009-05-27

This Cucumber version fixes several bugs related to Ruby on Rails and RSpec. If you
use Cucumber with a Rails app we *strongly* recommend you bootstrap Cucumber again:

  ruby script/generate cucumber

=== New Features
* Rails cucumber generator sets up default gem dependencies in cucumber environment.
* The duration of a run is reported by formatters - same format as the Linux time command (#228 Aslak Hellesøy)
* Scenario and ExampleRow objects (passed to Before and After hooks) have #name and #line methods (#316 Aslak Hellesøy)
* Rails generator creates a cucumber environment file to avoid potential cache_classes conflicts in test.rb (#165, Ben Mabey)
* HTML formatter renders @tags (but the CSS is still ugly)

=== Removed/changed features
* The Cucumber Rake task will again fork by default (as 0.3.3 and earlier). Forking must be turned off explicitly. (Aslak Hellesøy)

=== Bugfixes
* Better coexistence with RSpec - Cucumber now *neuters* the part of RSpec that tries to parse ARGV.
* The differ= exception is gone (#325, #340 Aslak Hellesøy)

== 0.3.7 2009-05-22

This is the "Help JetBrains RubyMine" release!

=== New Features
* Added new Given alias for Catalan: Donat|Donada (Lleïr Borràs Metje)